--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-Project Template.
+  Project Template.
+  <div ng-controller="MainCtrl as ctrl">
+    {{ctrl.msg}}
+  </div>
+
 
 <script src="index.bundle.js"></script>
 </body>
